--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,13 @@ h6 {
   padding-right: 15px;
 }
 
+.header-wrap {
+  border-bottom: 1px solid #ececec;
+}
+
 .main-nav {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
 }
 
 .nav {
