--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,19 @@ h6 {
   padding: 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -192,10 +205,6 @@ h6 {
 }
 
 /* Section */
-
-.hidden-title {
-  display: none;
-}
 
 .features {
   padding-top: 94px;
