--- a/css/styles.css
+++ b/css/styles.css
@@ -41,9 +41,20 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
   margin: 0;
   padding: 0;
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 .visually-hidden {
@@ -381,7 +392,6 @@ h6 {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: inherit;
-  cursor: pointer;
 }
 
 .btn-filter:hover,
