--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,8 @@ button {
 }
 
 .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
   color: var(--primary-text-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
