--- a/css/styles.css
+++ b/css/styles.css
@@ -173,14 +173,11 @@ button {
   background-color: #2f303a;
 }
 
-.hero-title-wrap {
-  display: flex;
-  justify-content: center;
-}
-
 .hero-title {
   margin-top: 0;
   margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 696px;
 
   color: var(--primary-white-color);
